--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "leetcode",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:yuenwinyun/leetcode.git",
-  "author": "yuenwinyun <114036811@qq.com>",
-  "license": "MIT",
-  "scripts": {
-    "watch": "tsc --watch"
-  },
-  "dependencies": {
-    "prettier": "^2.2.1",
-    "typescript": "^4.2.3"
-  }
+    "name": "leetcode",
+    "version": "1.0.0",
+    "main": "index.js",
+    "repository": "git@github.com:yuenwinyun/leetcode.git",
+    "author": "yuenwinyun <114036811@qq.com>",
+    "license": "MIT",
+    "scripts": {
+        "watch": "tsc --watch",
+        "jest": "jest --watch"
+    },
+    "dependencies": {
+        "@types/jest": "^26.0.22",
+        "jest": "^26.6.3",
+        "prettier": "^2.2.1",
+        "ts-jest": "^26.5.4",
+        "typescript": "^4.2.3"
+    }
 }
