--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "noEmit": true,
-    "noImplicitAny": true,
-    "baseUrl": "."
-  }
+    "compilerOptions": {
+        "strict": true,
+        "noEmit": true,
+        "noImplicitAny": true,
+        "baseUrl": ".",
+        "paths": {
+            "util/*": ["util/*"]
+        }
+    }
 }
