--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "noImplicitAny": true,
         "baseUrl": ".",
         "paths": {
-            "util/*": ["util/*"]
+            "util/*": ["util/*"],
+            "datastructure/*": ["datastructure/*"]
         }
     }
 }
