--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "author": "yuenwinyun <geek@yuenwinyun.com>",
     "license": "MIT",
     "scripts": {
-        "watch": "tsc --watch",
-        "jest": "jest --watch"
+        "start": "tsc --watch",
+        "test": "jest"
     },
     "dependencies": {
         "@types/jest": "^26.0.22",
