--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "license": "MIT",
     "scripts": {
         "start": "tsc --watch",
-        "test": "jest"
+        "test": "jest --watchAll"
     },
     "dependencies": {
-        "@types/jest": "^26.0.22",
-        "jest": "^26.6.3",
-        "prettier": "^2.2.1",
-        "ts-jest": "^26.5.4",
-        "typescript": "^4.2.3"
+        "@types/jest": "^26.0.23",
+        "jest": "^27.0.3",
+        "prettier": "^2.3.0",
+        "ts-jest": "^27.0.1",
+        "typescript": "^4.3.2"
     },
     "devDependencies": {
-        "@types/ramda": "^0.27.39"
+        "@types/ramda": "^0.27.40"
     }
 }
