--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "scripts": {
         "start": "tsc --watch",
-        "test": "jest --watchAll"
+        "test": "jest"
     },
     "dependencies": {
         "@types/jest": "^26.0.23",
@@ -17,6 +17,7 @@
         "typescript": "^4.3.2"
     },
     "devDependencies": {
+        "@type-challenges/utils": "^0.1.1",
         "@types/ramda": "^0.27.40"
     }
 }
