chore: add nextGreaterElement I

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "noEmit": true,
         "noImplicitAny": true,
         "esModuleInterop": true,
+        "noImplicitOverride": true,
         "baseUrl": ".",
         "paths": {
             "util/*": ["util/*"],
