--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "baseUrl": ".",
         "paths": {
             "util/*": ["util/*"],
-            "datastructure/*": ["datastructure/*"]
+            "data-structure/*": ["data-structure/*"]
         }
     }
 }
