--- a/package.json
+++ b/package.json
@@ -5,20 +5,18 @@
     "repository": "git@github.com:yuenwinyun/leetcode.git",
     "author": "yuenwinyun <geek@yuenwinyun.com>",
     "license": "MIT",
+    "private": true,
     "scripts": {
-        "start": "tsc --watch",
-        "test": "jest --watch",
+        "build": "tsc",
+        "test": "pnpm run build && xv ./lib",
         "format": "prettier --config ./.prettierrc.yml --write '**/*.{ts,tsx,js,jsx,json,yml}'"
-    },
-    "dependencies": {
-        "@types/jest": "^26.0.23",
-        "jest": "^27.0.4",
-        "prettier": "^2.3.1",
-        "ts-jest": "^27.0.3",
-        "typescript": "^4.3.3"
     },
     "devDependencies": {
         "@type-challenges/utils": "^0.1.1",
-        "@types/ramda": "^0.27.40"
+        "@types/node": "^15.12.4",
+        "@types/ramda": "^0.27.40",
+        "prettier": "^2.3.1",
+        "typescript": "^4.3.4",
+        "xv": "^0.2.2"
     }
 }
