refactor: fix test cases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
         "esModuleInterop": true,
         "noImplicitOverride": true,
         "baseUrl": ".",
-        "outDir": "./lib",
+        "outDir": "./lib"
     }
 }
