--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "private": true,
     "scripts": {
         "build": "tsc",
-        "test": "pnpm run build && xv ./lib",
+        "test": "jest",
         "format": "prettier --config ./.prettierrc.yml --write '**/*.{ts,tsx,js,jsx,json,yml}'"
     },
     "devDependencies": {
         "@type-challenges/utils": "^0.1.1",
-        "@types/node": "^15.14.2",
-        "prettier": "^2.3.2",
-        "typescript": "^4.3.5",
-        "xv": "^0.2.3"
+        "@types/jest": "^27.4.0",
+        "@types/node": "^15.14.9",
+        "jest": "^27.4.7",
+        "prettier": "^2.5.1",
+        "ts-jest": "^27.1.3",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.5.5"
     }
 }
