chore: format files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
         "baseUrl": ".",
         "noFallthroughCasesInSwitch": true,
         "outDir": "./dist",
-        "importHelpers": true
+        "importHelpers": true,
+        "noImplicitAny": true
     },
     "compileOnSave": true,
     "include": ["."]
